<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help to find a way!</string>
    <string name="powered_by">Powered By Phoenix Developer</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="Start">Start</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="search">Search...</string>
    <string name="enter_your_number">Enter Your Number</string>
    <string name="enter_username">Enter Username</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="FullName">Full Name</string>
    <string name="Email">Email</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Others">Others</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="New_Password">New Password</string>
    <string name="Confirm_Password">Confirm Password</string>
</resources>