<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginAndSignup.RetailerLoginAndSignup">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_page_gradient">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back_btn"
                app:tint="@color/white" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/gilroy_bold"
                android:text="Sign up"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/backBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/backBtn" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullname_inputlayout"
                style="@style/EditText.BoxStrokeColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:startIconDrawable="@drawable/ic_edit"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gilroy_light"
                    android:hint="@string/FullName"
                    android:inputType="text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_inputlayout"
                style="@style/EditText.BoxStrokeColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullname_inputlayout"
                app:startIconDrawable="@drawable/ic_username"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gilroy_light"
                    android:hint="@string/Username"
                    android:inputType="text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_inputlayout"
                style="@style/EditText.BoxStrokeColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_inputlayout"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gilroy_light"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_inputlayout"
                style="@style/EditText.BoxStrokeColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phonenumber_inputlayout"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_light"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checkedButton="@+id/radio_button_1"
                android:orientation="horizontal"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/password_inputlayout"
                app:layout_constraintStart_toStartOf="@+id/password_inputlayout"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <RadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:elevation="4dp"
                    android:text="@string/Male"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_textcolor" />

                <RadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:buttonTint="@color/white"
                    android:elevation="4dp"
                    android:text="@string/Female"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_textcolor" />

                <RadioButton
                    android:id="@+id/gender_others"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:buttonTint="@color/white"
                    android:elevation="4dp"
                    android:text="@string/Others"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_textcolor" />
            </RadioGroup>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:layout_editor_absoluteX="0dp" />


            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="-1dp"
                android:background="@drawable/countrypicker_stroke"
                android:gravity="center"
                android:paddingStart="8dp"
                app:ccp_contentColor="@color/white"
                app:ccp_showNameCode="false"
                app:ccp_textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/phonenumber_inputlayout"
                app:layout_constraintEnd_toStartOf="@+id/phonenumber_inputlayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/phonenumber_inputlayout"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phonenumber_inputlayout"
                style="@style/EditText.BoxStrokeColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/white"
                app:boxCornerRadiusTopEnd="4dp"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/countryCodePicker"
                app:layout_constraintTop_toBottomOf="@+id/email_inputlayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_light"
                    android:hint="@string/PhoneNumber"
                    android:inputType="phone"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/white"
                android:text="Sign up"
                android:textColor="@color/text_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datePicker"
                app:rippleColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/gilroy_light"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/login_btn"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="@+id/login_btn"
                app:layout_constraintTop_toBottomOf="@+id/login_btn" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/gilroy_light"
                android:text="Gender"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/password_inputlayout"
                app:layout_constraintTop_toBottomOf="@+id/password_inputlayout" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/gilroy_light"
                android:text="Date Of Birth"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>